Update mysql example

--- a/01-basic/mysql.yml
+++ b/01-basic/mysql.yml
@@ -7,6 +7,11 @@ services:
       - 80:80
     environment:
       - TZ=${TZ:-America/Denver}
+      - DB_TYPE=mysql
+      - DB_HOST=mysql
+      - DB_DATABASE=octobercms
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
 
   mysql:
     image: mysql:latest
@@ -16,3 +21,4 @@ services:
     environment:
       - TZ=${TZ:-America/Denver}
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=octobercms
